# CCQENu

./: Doxyfile  ME-Neutrino-CCQELike.html  ME-Neutrino-CCQELike.md  README.md  docs  dox.cfg  dox.txt  getCSVs.C
AB_PaperPlots/: README.md
GENIE3/: Genie.py  Test.ipynb  genie3_qelike_hyperon_study.py
ME-Nu-Data_Release/: table.md  tables.html
docs/: _background_sub_8py.html  _background_sub_8py_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_v_functions_8h.html  _c_v_functions_8h__dep__incl.map  _c_v_functions_8h__dep__incl.md5  _c_v_functions_8h__incl.map  _c_v_functions_8h__incl.md5  _c_v_functions_8h_source.html  _c_v_universe_8cxx.html  _c_v_universe_8cxx_8o_8d.html  _c_v_universe_8cxx_8o_8d_source.html  _c_v_universe_8cxx__incl.map  _c_v_universe_8cxx__incl.md5  _c_v_universe_8cxx_source.html  _c_v_universe_8h.html  _c_v_universe_8h__dep__incl.map  _c_v_universe_8h__dep__incl.md5  _c_v_universe_8h__incl.map  _c_v_universe_8h__incl.md5  _c_v_universe_8h_source.html  _copy_f_ile_8cxx.html  _copy_f_ile_8cxx__incl.map  _copy_f_ile_8cxx__incl.md5  _copy_f_ile_8cxx_source.html  _copy_f_ile_8h.html  _copy_f_ile_8h__incl.map  _copy_f_ile_8h__incl.md5  _copy_f_ile_8h_source.html  _cut_from_config_8h.html  _cut_from_config_8h__dep__incl.map  _cut_from_config_8h__dep__incl.md5  _cut_from_config_8h__incl.map  _cut_from_config_8h__incl.md5  _cut_from_config_8h_source.html  _do_the_fit_8cpp.html  _do_the_fit_8cpp_8o_8d.html  _do_the_fit_8cpp_8o_8d_source.html  _do_the_fit_8cpp__incl.map  (+612 more)
hms_plots/: CCQEPlotUtils.py  CompareXS.py  CompareXSpaper.py  Energy_plots.py  NPchi2utils.py  PlotRatios.py  ScaleFactor.nb  ThetaStudy.ipynb  Untitled.ipynb  chi2_v15_antinu.py  chi2_v16_antinu.py  chi2_v17_antinu.py  chi2_v18_antinu.py  chi2_v19_antinu.py  chi2_v20_antinu.py  chi2_v21_antinu.py  chi2_v22_antinu.py  chi2_v23_antinu.py  chi2_v24_antinu.py  chi2list.py  chi2utils.py  clean.sh  compare.ipynb  compare_xsectionmodels_variations_ratio_enu.py  compare_xsectionmodels_variations_ratio_enu_hms.py  config.json  csv2json.ipynb  enu_chi2list.py  ptmu_chi2list.py  pzmu_chi2list.py  pzmu_ptmu_chi2list.py  q2_chi2list.py  response.ipynb  response2.ipynb  runme.sh  sean.py  tablemaker.py
html/: annotated.html  annotated_dup.js  classes.html  dir_06d46794dcc6b6f0c898fdc2f5ab1987.html  dir_07abb3914016eb35099f0eeac403400c.html  dir_0944dc416fd9d6b06969a8df621ee80a.html  dir_0b379b41bff1f11c232bd32f7dc45f49.html  dir_0d2beeae3f504493ce005821ec08a32a.html  dir_14dc661f0098dff082980d4335d1f9c8.html  dir_169be9b7d4db038ecd074f2e7e471fef.html  dir_169be9b7d4db038ecd074f2e7e471fef.js  dir_1add6b1d3c8d390a589456fdbfe7372f.html  dir_25897e4aa1b09d269b8b1497435c4bd8.html  dir_28f220d3fa766cb256488550607cdae7.html  dir_29c7feb4e5580e0e78b24bdc5cc2d921.html  dir_2af07490178b211a8ce67f21a9fd2cd7.html  dir_2f06f244162a0c1240833d4385d8c71d.html  dir_310e4e6dd4572ceb7baa3d8376b34826.html  dir_3134f5b61cea6c3deb38c718d7f3444d.html  dir_3134f5b61cea6c3deb38c718d7f3444d.js  dir_335a5b536dd0313702df733310da7a29.html  dir_34372812ef56819dadcebceb20ea52dd.html  dir_34372812ef56819dadcebceb20ea52dd.js  dir_3945730153b9d0ba4b1b4a7cf9cbb2c8.js  dir_3cd85e268f21013aea7ab889207c7a4c.html  dir_3f85d7b77de9454f27a0eef1b3209b45.html  dir_4aa2e7b184a267d1895408995c0d91a4.html  dir_4aa2e7b184a267d1895408995c0d91a4.js  dir_4ce92160be800aa67c883df87930081c.html  dir_5768df5762c80fe9757bd8ab3158c51f.html  dir_586f7c604da2c6077892dfe30738d924.html  dir_586f7c604da2c6077892dfe30738d924.js  dir_59e62e91d34506cc824574b139a89abf.html  dir_5a194caf40d78702b2c8371256dfd08b.html  dir_61b2fceee85632c3aade15e8a1f8a2d2.html  dir_61b2fceee85632c3aade15e8a1f8a2d2.js  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_8132c49adac5e9408d55e19e0c428302.html  dir_8565e17dd1d9e454859bcebfad403d74.html  dir_8565e17dd1d9e454859bcebfad403d74.js  (+57 more)
latex/: annotated.tex  dir_310e4e6dd4572ceb7baa3d8376b34826.tex  dir_604de6efdcd0bfdbbb9282100ddfb41f.tex  files.tex  hierarchy.tex  modules.tex  namespaces.tex  refman.tex
make_hists/: .gitignore  AntiNuALL.json  AntiNuCuts_v13.json  AntiNuEnu_5A.json  AntiNu_5A.json  AntiNu_v15_blobs.json  AntiNu_v6.json  AntiNu_v7.json  AntiNu_v9_batch.json  BinomialMC_t.cxx  Example.json  Fit1A.json  Fit1N.json  FitDriver.cxx  FitRecoil.json  FitTest.json  G__CCQEMAT.cxx  Header.tex  MakeReport.py  Mar24.json  Nu_v6.json  (+68 more)
make_hists/v_08/: AntiNuCuts_v8.json  AntiNuSamples_v8.json  AntiNu_5A.json  AntiNu_6A.json  AntiNu_6B.json  AntiNu_6C.json  AntiNu_6D.json  AntiNu_6E.json  AntiNu_6F.json  AntiNu_6G.json  AntiNu_6H.json  AntiNu_6I.json  AntiNu_Template.json  AntiNu_Template.json~  CMakeLists.txt  mkjson.py  test_v8.json  test_v8.json~
(+3921 files in other folders)
